--- a/EduHomeBack/EduHomeBack/Areas/Manage/Views/Blog/Index.cshtml
+++ b/EduHomeBack/EduHomeBack/Areas/Manage/Views/Blog/Index.cshtml
@@ -57,8 +57,8 @@
                     </td>
                     <td>
                         <a class="btn btn-warning" asp-area="manage" asp-controller="blog" asp-action="update" asp-route-id="@blog.Id">Update</a>
-                        <a class="btn btn-warning" asp-area="manage" asp-controller="blog" asp-action="delete" asp-route-id="@blog.Id">Delete</a>
-                        <a class="btn btn-warning" asp-area="manage" asp-controller="blog" asp-action="detail" asp-route-id="@blog.Id">Detail</a>
+                        <a class="btn btn-danger" asp-area="manage" asp-controller="blog" asp-action="delete" asp-route-id="@blog.Id">Delete</a>
+                        <a class="btn btn-success" asp-area="manage" asp-controller="blog" asp-action="detail" asp-route-id="@blog.Id">Detail</a>
 
                     </td>
                 </tr>
