--- a/EduHomeBack/EduHomeBack/Areas/Manage/Views/Teacher/Index.cshtml
+++ b/EduHomeBack/EduHomeBack/Areas/Manage/Views/Teacher/Index.cshtml
@@ -57,6 +57,8 @@
                     </td>
                     <td>
                         <a class="btn btn-warning" asp-area="manage" asp-controller="teacher" asp-action="update" asp-route-id="@teacher.Id">Update</a>
+                        <a class="btn btn-danger" asp-area="manage" asp-controller="teacher" asp-action="delete" asp-route-id="@teacher.Id">Delete</a>
+                        <a class="btn btn-success" asp-area="manage" asp-controller="teacher" asp-action="detail" asp-route-id="@teacher.Id">Detail</a>
 
                     </td>
                 </tr>
