--- a/EduHomeBack/EduHomeBack/Views/Shared/Components/BlogBanner/Default.cshtml
+++ b/EduHomeBack/EduHomeBack/Views/Shared/Components/BlogBanner/Default.cshtml
@@ -7,7 +7,7 @@
         <a asp-controller="blog" asp-action="detail" id="blog">
             <img width="100" src= "~/img/banner/@Model.Image" alt="blog">
         </a>
-            <h2>@Html.Raw(Model.Title)</h2>
+            <h2>@Model.Title</h2>
 
     </div>
 
