fixed update and delete

--- a/EduHomeBack/EduHomeBack/Areas/Manage/Views/Position/Index.cshtml
+++ b/EduHomeBack/EduHomeBack/Areas/Manage/Views/Position/Index.cshtml
@@ -5,7 +5,7 @@
     }
     <div class="row justify-content-between">
         <div class="col-lg-2">
-            <h1 class="h3 mb-4 text-gray-800">Category Page</h1>
+            <h1 class="h3 mb-4 text-gray-800">Position Page</h1>
         </div>
         <div class="col-lg-1">
             <a asp-area="manage" asp-controller="position" asp-action="create" class="btn btn-primary">Create</a>
