--- a/EduHomeBack/EduHomeBack/Areas/Manage/Views/Slider/Index.cshtml
+++ b/EduHomeBack/EduHomeBack/Areas/Manage/Views/Slider/Index.cshtml
@@ -7,6 +7,9 @@
     <div class="col-lg-2">
         <h1 class="h3 mb-4 text-gray-800">Slider Page</h1>
     </div>
+    <div class="col-lg-1">
+        <a asp-area="manage" asp-controller="skill" asp-action="create" class="btn btn-primary">Create</a>
+    </div>
 </div>
 
 <div class="row">
@@ -68,6 +71,7 @@
                         </td>
                         <td>
                             <a class="btn btn-warning" asp-area="manage" asp-controller="slider" asp-action="update" asp-route-id="@item.Id">Update</a>
+                            <a class="btn btn-danger" asp-area="manage" asp-controller="slider" asp-action="delete" asp-route-id="@item.Id">Delete</a>
 
                         </td>
                     </tr>
