just fixed an error

--- a/EduHomeBack/EduHomeBack/Areas/Manage/Views/Event/Index.cshtml
+++ b/EduHomeBack/EduHomeBack/Areas/Manage/Views/Event/Index.cshtml
@@ -51,7 +51,7 @@
                             @event1.Name
                         </td>
                         <td>
-                            @event1.Date.ToString("dd/mm/yyyy");
+                            @event1.Date.ToString("dd/mm/yyyy")
                         </td>
                         <td>
                             <a class="btn btn-warning" asp-area="manage" style=" margin-bottom:20px" asp-controller="event" asp-action="update" asp-route-id="@event1.Id">Update</a>
