--- a/EduHomeBack/EduHomeBack/Areas/Manage/Views/Blog/Index.cshtml
+++ b/EduHomeBack/EduHomeBack/Areas/Manage/Views/Blog/Index.cshtml
@@ -7,6 +7,9 @@
     <div class="col-lg-2">
         <h1 class="h3 mb-4 text-gray-800">Blog Page</h1>
     </div>
+    <div class="col-lg-1">
+        <a asp-area="manage" asp-controller="blog" asp-action="create" class="btn btn-primary">Create</a>
+    </div>
 </div>
 
 <div class="row">
