--- a/EduHomeBack/EduHomeBack/Areas/Manage/Views/Blog/Update.cshtml
+++ b/EduHomeBack/EduHomeBack/Areas/Manage/Views/Blog/Update.cshtml
@@ -25,7 +25,7 @@
                 <span asp-validation-for="Author" class="text text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Date">Description</label>
+                <label asp-for="Date">Date</label>
                 <input type="date" asp-for="Date" class="form-control" placeholder="Date">
                 <span asp-validation-for="Date" class="text text-danger"></span>
             </div>
