--- a/EduHomeBack/EduHomeBack/Areas/Manage/Views/Event/Create.cshtml
+++ b/EduHomeBack/EduHomeBack/Areas/Manage/Views/Event/Create.cshtml
@@ -32,7 +32,7 @@
                 <span asp-validation-for="Date" class="text text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="StartTime">StudentsCount</label>
+                <label asp-for="StartTime">StartTime</label>
                 <input type="time" asp-for="StartTime" class="form-control" placeholder="StartTime">
                 <span asp-validation-for="StartTime" class="text text-danger"></span>
             </div>
