speaker crud done

--- a/EduHomeBack/EduHomeBack/Areas/Manage/Views/Event/Detail.cshtml
+++ b/EduHomeBack/EduHomeBack/Areas/Manage/Views/Event/Detail.cshtml
@@ -60,7 +60,7 @@
                         @foreach (EventTag EventTag in Model.EventTags)
                         {
 
-                            @EventTag.Tag
+                            @EventTag.Tag.Name
                             <br>
                         }
 
@@ -69,7 +69,7 @@
                         @foreach (EventSpeaker eventSpeaker in Model.EventSpeakers)
                         {
 
-                            @eventSpeaker.Speaker
+                            @eventSpeaker.Speaker.Name
                             <br>
                         }
 
