--- a/EduHomeBack/EduHomeBack/Areas/Manage/Views/Testimonial/Update.cshtml
+++ b/EduHomeBack/EduHomeBack/Areas/Manage/Views/Testimonial/Update.cshtml
@@ -9,7 +9,7 @@
 <h1 class="h3 mb-4 text-gray-800">Update Testimonial</h1>
 <div class="row justify-content-center">
     <div class="col-lg-8">
-        <form method="post">
+        <form method="post" enctype="multipart/form-data">
             <div class="form-group">
                 <label asp-for="Author">Author</label>
                 <input asp-for="Author" class="form-control" placeholder="Enter Author">
