--- a/EduHomeBack/EduHomeBack/Areas/Manage/Views/Course/Create.cshtml
+++ b/EduHomeBack/EduHomeBack/Areas/Manage/Views/Course/Create.cshtml
@@ -89,16 +89,22 @@
                 <label>Catgeory</label>
                 <select asp-for="CategoryId" class="form-control" asp-items="selectCategoryListItems">
                 </select>
+                <span asp-validation-for="CategoryId" class="text text-danger"></span>
+
             </div>
-            <div  class="form-group">
+            <div class="form-group">
                 <label>Teacher</label>
                 <select asp-for="TeacherId" class="form-control" asp-items="selectTeacherListItems">
                 </select>
+                <span asp-validation-for="TeacherId" class="text text-danger"></span>
+
             </div>
-            <div  class="form-group">
+            <div class="form-group">
                 <label>Tag</label>
                 <select asp-for="TagIds" multiple class="form-control" asp-items="selectTagListItems">
                 </select>
+                <span asp-validation-for="TagIds" class="text text-danger"></span>
+
             </div>
             <button type="submit" class="btn btn-primary">Create</button>
         </form>
