--- a/EduHomeBack/EduHomeBack/Areas/Manage/Views/Event/Create.cshtml
+++ b/EduHomeBack/EduHomeBack/Areas/Manage/Views/Event/Create.cshtml
@@ -55,16 +55,22 @@
                 <label>Catgeory</label>
                 <select asp-for="CategoryId" class="form-control" asp-items="selectCategoryListItems">
                 </select>
+                <span asp-validation-for="CategoryId" class="text text-danger"></span>
+
             </div>
             <div class="form-group">
                 <label>Tag</label>
                 <select asp-for="TagIds" multiple class="form-control" asp-items="selectTagListItems">
                 </select>
+                <span asp-validation-for="TagIds" class="text text-danger"></span>
+
             </div>
-            <div  class="form-group">
+            <div class="form-group">
                 <label>Speaker</label>
                 <select asp-for="SpeakerIds" multiple class="form-control" asp-items="selectSpeakerListItems">
                 </select>
+                <span asp-validation-for="SpeakerIds" class="text text-danger"></span>
+
             </div>
             <button type="submit" class="btn btn-primary">Create</button>
         </form>
