--- a/EduHomeBack/EduHomeBack/Areas/Manage/Views/Slider/Create.cshtml
+++ b/EduHomeBack/EduHomeBack/Areas/Manage/Views/Slider/Create.cshtml
@@ -6,7 +6,7 @@
 <h1 class="h3 mb-4 text-gray-800">Create Slider</h1>
 <div class="row justify-content-center">
     <div class="col-lg-8">
-        <form method="post">
+        <form method="post" enctype="multipart/form-data">
             <div class="form-group">
                 <label asp-for="Title">Title</label>
                 <input asp-for="Title" class="form-control" placeholder="Enter Title">
