--- a/EduHomeBack/EduHomeBack/Areas/Manage/Views/Speaker/Index.cshtml
+++ b/EduHomeBack/EduHomeBack/Areas/Manage/Views/Speaker/Index.cshtml
@@ -7,6 +7,9 @@
     <div class="col-lg-2">
         <h1 class="h3 mb-4 text-gray-800">Speaker Page</h1>
     </div>
+    <div class="col-lg-1">
+        <a asp-area="manage" asp-controller="speaker" asp-action="create" class="btn btn-primary">Create</a>
+    </div>
 </div>
 
 <div class="row">
@@ -64,6 +67,7 @@
                     </td>
                     <td>
                         <a class="btn btn-warning" asp-area="manage" asp-controller="speaker" asp-action="update" asp-route-id="@speaker.Id">Update</a>
+                        <a class="btn btn-danger" asp-area="manage" asp-controller="speaker" asp-action="delete" asp-route-id="@speaker.Id">Delete</a>
 
                     </td>
                 </tr>
