--- a/EduHomeBack/EduHomeBack/Areas/Manage/Views/Teacher/Update.cshtml
+++ b/EduHomeBack/EduHomeBack/Areas/Manage/Views/Teacher/Update.cshtml
@@ -11,7 +11,7 @@
 <h1 class="h3 mb-4 text-gray-800">Update Teacher</h1>
 <div class="row justify-content-center">
     <div class="col-lg-8">
-        <form method="post">
+        <form method="post" enctype="multipart/form-data">
             <div class="form-group">
                 <label asp-for="Name">Name</label>
                 <input asp-for="Name" class="form-control" placeholder="Enter Name">
