--- a/EduHomeBack/EduHomeBack/Areas/Manage/Views/Skill/Index.cshtml
+++ b/EduHomeBack/EduHomeBack/Areas/Manage/Views/Skill/Index.cshtml
@@ -53,6 +53,7 @@
                     <td>
                         <a class="btn btn-warning" asp-area="manage" asp-controller="skill" asp-action="update" asp-route-id="@skill.Id">Update</a>
                         <a class="btn btn-danger" asp-area="manage" asp-controller="skill" asp-action="delete" asp-route-id="@skill.Id">Delete</a>
+                        <a class="btn btn-success" asp-area="manage" asp-controller="skill" asp-action="add" asp-route-id="@skill.Id">Add Teacher</a>
 
                     </td>
                 </tr>
