--- a/EduHomeBack/EduHomeBack/Areas/Manage/Views/Speaker/Index.cshtml
+++ b/EduHomeBack/EduHomeBack/Areas/Manage/Views/Speaker/Index.cshtml
@@ -68,6 +68,7 @@
                     <td>
                         <a class="btn btn-warning" asp-area="manage" asp-controller="speaker" asp-action="update" asp-route-id="@speaker.Id">Update</a>
                         <a class="btn btn-danger" asp-area="manage" asp-controller="speaker" asp-action="delete" asp-route-id="@speaker.Id">Delete</a>
+                        <a class="btn btn-success" asp-area="manage" asp-controller="speaker" asp-action="add" asp-route-id="@speaker.Id">Add Event</a>
 
                     </td>
                 </tr>
