--- a/EduHomeBack/EduHomeBack/Views/Event/Detail.cshtml
+++ b/EduHomeBack/EduHomeBack/Views/Event/Detail.cshtml
@@ -49,27 +49,34 @@
                     </div>
                     <div class="reply-area">
                         <h3>LEAVE A REPLY</h3>
-                        <p>I must explain to you how all this a mistaken idea of ncing great explorer of the rut<br> the is lder of human happinescias unde omnis iste natus error sit volptatem </p>
-                        <form id="contact-form" action="http://demo.devitems.com/eduhome/mail.php" method="post">
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <p>Name</p>
-                                    <input type="text" name="name" id="name">
+                        I must explain to you how all this a mistaken idea of ncing great explorer of the rut
+                        the is lder of human happinescias unde omnis iste natus error sit volptatem
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <form asp-action="AddComment" method="post">
+                                <div class="row">
+
+                                    <div class="col-md-12">
+
+                                        <p id="subj">Subject</p>
+
+                                        <input asp-for="@Model.Event.Comments.FirstOrDefault().Subject">
+                                        <p id="message">Message</p>
+
+                                        <textarea asp-for="@Model.Event.Comments.FirstOrDefault().Message" cols="15" rows="10"></textarea>
+                                        <p id="eventid" style="display:none">@Model.Event.Id</p>
+
+                                        <input type="hidden" asp-for="@Model.Event.Comments.FirstOrDefault().EventId" value="@Model.Event.Id" />
+                                    </div>
                                 </div>
-                                <div class="col-md-12">
-                                    <p>Email</p>
-                                    <input type="text" name="email" id="email">
-                                </div>
-                                <div class="col-md-12">
-                                    <p>Subject</p>
-                                    <input type="text" name="subject" id="subject">
-                                    <p>Massage</p>
-                                    <textarea name="message" id="message" cols="15" rows="10"></textarea>
-                                </div>
-                            </div>
-                            <a class="reply-btn" href="#" data-text="send"><span>send message</span></a>
-                            <p class="form-messege"></p>
-                        </form>
+                                <a asp-controller="Event" asp-action="AddComment" id="SendMessage">Send</a>
+
+
+                                <p class="form-messege"></p>
+                            </form>
+                          
+
+                        }
                     </div>
                 </div>
             </div>
