--- a/EduHomeBack/EduHomeBack/Views/Shared/_Layout.cshtml
+++ b/EduHomeBack/EduHomeBack/Views/Shared/_Layout.cshtml
@@ -48,7 +48,7 @@
                         <p>I must explain to you how all this mistaken idea </p>
                     </div>
                     <div class="newsletter-form mc_embed_signup">
-                        <form action="http://devitems.us11.list-manage.com/subscribe/post?u=6bbb9b6f5827bd842d9640c82&amp;id=05d85f18ef" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                        <form asp-controller="Account" asp-action="Subscribe" method="post">
                             <div id="mc_embed_signup_scroll" class="mc-form">
                                 <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Enter your e-mail address" required>
                                 <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
